--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,10 @@
     "@repo/ui": "*",
     "next": "^15.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@tailwindcss/postcss": "^4.0.3",
+    "tailwindcss": "^4.0.6",
+    "postcss": "^8.5.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
