--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,12 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "baseUrl": ".",
+  "paths": {
+    "@/*": [
+      "./*"
+    ]
+  },
   "exports": {
     "./*": "./src/*.tsx",
     "./styles.css": "./dist/styles.css"
@@ -26,9 +32,14 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.6",
     "@tailwindcss/postcss": "^4.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.3.8"
   }
 }
