feat: add @radix-ui/react-slot and @radix-ui/react-compose-refs dependencies to package.json and update tsconfig.json paths
Signed-off-by: Ismail El Badawy <ismailelbadawyw@gmail.com>

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://ui.shadcn.com/schema.json",
-    "style": "new-york",
+    "style": "default",
     "rsc": false,
     "tsx": true,
     "tailwind": {
@@ -12,10 +12,7 @@
     },
     "aliases": {
         "components": "@/components",
-        "utils": "@/src`/utils",
-        "ui": "@/components/ui",
-        "lib": "@/src",
-        "hooks": "@/hooks"
+        "utils" : "@/lib/utils"
     },
     "iconLibrary": "lucide"
 }
