feat: refactor button component and update import paths in UI package
Signed-off-by: Ismail El Badawy <ismailelbadawyw@gmail.com>

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,8 +11,8 @@
         "prefix": ""
     },
     "aliases": {
-        "components": "@/components",
-        "utils" : "@/lib/utils"
+        "components": "@repo/ui/components",
+        "utils" : "@repo/ui/lib/utils"
     },
     "iconLibrary": "lucide"
 }
