--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,10 +4,11 @@
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
-      "@/*": [
-        "*"
+      "@repo/ui/*": [
+        "./src/*"
       ]
-    }
+    },
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "src"
